Adding other possibilities addressed for performance improvements